--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,7 +67,7 @@
                         <li><a class="dropdown-item" href="#" id="navDashboardLink">
                             <i class="fas fa-tachometer-alt"></i> Dashboard
                         </a></li>
-                        <li><a class="dropdown-item" href="#">
+                        <li><a class="dropdown-item" href="/profile">
                             <i class="fas fa-user"></i> Thông tin cá nhân
                         </a></li>
                         <li><hr class="dropdown-divider"></li>
